# anchor-coverage

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  agave_tag.txt  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
fixtures/basic/: Anchor.toml  Cargo.toml  package-lock.json  package.json
fixtures/basic/programs/basic/: Cargo.toml
fixtures/basic/programs/basic/src/: lib.rs
fixtures/basic/test_configs/full/: Test.toml
fixtures/basic/test_configs/just_increment_x/: Test.toml
fixtures/basic/test_configs/just_increment_y/: Test.toml
fixtures/basic/tests/: basic.ts  just_increment_x.ts  just_increment_y.ts
fixtures/call_external/: Anchor.toml  Cargo.toml  package-lock.json  package.json
fixtures/call_external/programs/call_external/: Cargo.toml
fixtures/call_external/programs/call_external/src/: lib.rs
fixtures/call_external/tests/: call_external.ts
fixtures/external_call/: Anchor.toml  Cargo.toml  package.json
fixtures/external_call/programs/external_call/: Cargo.toml
fixtures/external_call/programs/external_call/src/: lib.rs
fixtures/external_call/tests/: external_call.ts
fixtures/multiple_programs/: Anchor.toml  package.json
fixtures/multiple_programs/programs/bar/: Cargo.toml
fixtures/multiple_programs/programs/bar/src/: lib.rs
fixtures/multiple_programs/programs/foo/: Cargo.toml
fixtures/multiple_programs/programs/foo/src/: lib.rs
fixtures/multiple_programs/tests/: bar.ts  foo.ts
fixtures/multiple_test_configs/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
fixtures/multiple_test_configs/programs/multiple_test_configs/: Cargo.toml
fixtures/multiple_test_configs/programs/multiple_test_configs/src/: lib.rs
fixtures/multiple_test_configs/tests/: full.ts  just_increment_x.ts  just_increment_y.ts
fixtures/retry/: index.d.ts  index.js  index.ts  package.json  tsconfig.json
scripts/: anchor_test_fixtures.sh  patch_platform_tools.sh
snapshots/basic_full/: should_increment_x.lcov  should_increment_y.lcov
snapshots/basic_just_increment_y/: 123344.lcov  is_initialized.lcov  should_increment_y.lcov
snapshots/multiple_test_configs_full/: should_increment_x.lcov  should_increment_y.lcov
snapshots/multiple_test_configs_just_increment_y/: is_initialized.lcov
src/: anchor_cli_config.rs  insn.rs  lib.rs  start_address.rs  tests.rs  util.rs  vaddr.rs
src/anchor_cli_lib/: hacks.rs  mod.rs
src/util/: mod.rs  var_guard.rs
tests/: ci.rs
