[package]
name = "anchor-coverage"
version = "0.1.0"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "A wrapper around `anchor test` for computing test coverage"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/anchor-coverage"

[dependencies]
addr2line = "0.24"
anyhow = "1.0"
assert_cmd = "2.0"
byteorder = "1.5"
cargo_metadata = "0.19"

[dev-dependencies]
ctor = "0.4"
lcov = "0.8"
regex = "1.11"
tempfile = "3.19"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
]
